# 3D_vision

./: README.md
IRBeacon_driver/: CMakeLists.txt  Main.qml  ircontroller.cpp  ircontroller.h  main.cpp  serialwriter.cpp  serialwriter.h
Photon/IR_Emitter/: README.md  project.properties
Photon/IR_Emitter/src/: IR_Emitter.cpp
opengl_3D_window/: .gitignore  CMakeCache.txt  cmake_install.cmake  cmakelists.txt  main.cpp  opengl_test.cpp  window.cpp  window.hpp
opengl_3D_window/common/: loadShaders.hpp  vertexShader.hpp
opengl_3D_window/libs/glad/: cmake_install.cmake
opengl_3D_window/libs/glad/include/glad/: glad.h
opengl_3D_window/libs/glad/src/: glad.c
opengl_3D_window/libs/glfw/: cmake_install.cmake  cmake_uninstall.cmake
opengl_3D_window/libs/glfw/docs/: cmake_install.cmake
opengl_3D_window/libs/glfw/src/: cmake_install.cmake  glfw3.pc
